force-app/main/default/objects/Contract/fields/Closed_Won_Volume__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Volume__c</fullName>
    <label>Closed Won Volume</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>