force-app/main/default/objects/Contract/fields/Contract_Approve__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Approve</label>
    <type>Checkbox</type>
</CustomField>