force-app/main/default/objects/Contract/fields/Contracted_volume__c.field-meta.xml
<CustomField>
    <fullName>Contracted_volume__c</fullName>
    <label>Contracted Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>