force-app/main/default/objects/Contract/fields/Delivery_term__c.field-meta.xml
<CustomField>
    <fullName>Delivery_term__c</fullName>
    <label>Delivery term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_terms</valueSetName>
    </valueSet>
</CustomField>