force-app/main/default/objects/Contract/fields/Q2_Volume__c.field-meta.xml
<CustomField>
    <fullName>Q2_Volume__c</fullName>
    <label>Q2 Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>