force-app/main/default/objects/Contract/fields/Q3_Volume__c.field-meta.xml
<CustomField>
    <fullName>Q3_Volume__c</fullName>
    <label>Q3 Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>