force-app/main/default/objects/Contract/fields/Requires_approval_for_volume__c.field-meta.xml
<CustomField>
    <fullName>Requires_approval_for_volume__c</fullName>
    <formula>IF(
AND(
OR(
ISPICKVAL(Market__c, &quot;EMEAI&quot;),
ISPICKVAL(Market__c, &quot;NAFTA&quot;)),
Contracted_volume__c &gt; 50
), true,
IF(
AND(
OR( ISPICKVAL(Market__c, &quot;Asia&quot;),
ISPICKVAL(Market__c, &quot;China&quot;)),
Contracted_volume__c &gt; 0
), TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires approval for volume</label>
    <type>Checkbox</type>
</CustomField>