force-app/main/default/objects/Contract/fields/Type_of_contract__c.field-meta.xml
<CustomField>
    <fullName>Type_of_contract__c</fullName>
    <inlineHelpText>- Formula: Contracted price defined by an index based formula.

- Fixed price: Contracted price fixed for a year or longer.

- Monthly/Quarterly/Semesterly: Contract with periodically re-negotiations of prices.</inlineHelpText>
    <label>Type of Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
            <value>
                <fullName>Monthly/Quaterly/Semesterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>