force-app/main/default/objects/Contract/validationRules/Contract_Approve_before_activated.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Approve_before_activated</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
  ISPICKVAL(Status, &quot;Activated&quot;) &amp;&amp; 
  Contract_Approve__c = false &amp;&amp;
  Requires_approval_for_volume__c = true,
true, false)</errorConditionFormula>
    <errorMessage>Before activating the contract you must have approval.</errorMessage>
</ValidationRule>