force-app/main/default/objects/Contract/validationRules/Sales_Marketing_Assistant_cant_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Marketing_Assistant_cant_owner</fullName>
    <active>true</active>
    <errorConditionFormula>Account.Owner.Profile.Name =&apos;Sales &amp; Marketing Assistant&apos;</errorConditionFormula>
    <errorMessage>The owner of the account must be the Sales Manager responsible for this client, please go into the account link to correct the account owner to the responsible Sales Manager.</errorMessage>
</ValidationRule>